--- a/HyderabadMonuments/src/main/res/values/strings.xml
+++ b/HyderabadMonuments/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
         The Baradari was constructed on the banks of the Musi river. Today, the region comes under the city limits of Hyderabad, India.
         The tourism department attributes the name to the reign of the Seventh Sultan of Golconda, Abdullah Qutb Shah who as an ode to his favorite courtesan, Taramati, is said to have named the sarai Taramati Baradari.</string>
     <string name="title_activity_map">MapActivity</string>
+
     <color name="action_bar_color">#ff19add8</color>
+
+    <string name="title_activity_directions">DirectionsActivity</string>
 
 </resources>
